--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -19,13 +19,13 @@
 
 			<div class="row">
 				<div class="col-lg-4 col-lg-offset-4" id="content">
-					<h2>WHAT DO YOU WANT TO DO TODAY?</h2>
+					<h2 class="title">WHAT DO YOU WANT TO DO TODAY?</h2>
 
-					<form action="{% url 'add' %}" method="POST" role="form">
+					<form action="{% url 'add_item'  %}" method="POST" role="form">
 						{% csrf_token %}
 						<div class="form-group">
 							<div class="input-group">
-							  {{ form.text }}
+							  {{ form.item }}
 							  <span class="input-group-btn">
 								  <button type="submit" class="btn btn-default" id="add-btn">ADD</button>
 							  </span>
@@ -37,12 +37,12 @@
 						<div class="col-lg-12">
 							<div class="btn-toolbar">
 								<div class="btn-group">
-									<a href="{% url 'deletecomplete' %}"><button type="button" class="btn btn-warning">
+									<a href="{% url 'delete_completed' %}"><button type="button" class="btn btn-warning">
 										<i class="glyphicon glyphicon-trash"></i> DELETE COMPLETED
 									</button></a>
 								</div>
 								<div class="btn-group">
-									<a href="{% url 'deleteall' %}"><button type="button" class="btn btn-warning">
+									<a href="{% url 'delete_all' %}"><button type="button" class="btn btn-warning">
 										<i class="glyphicon glyphicon-trash"></i> DELETE ALL
 									</button></a>
 								</div>
@@ -52,10 +52,10 @@
 
 					<ul class="list-group t20">
 						{% for todo in todo_list %}
-							{% if todo.complete %}
-							<li class="list-group-item todo-completed">{{ todo.text }}</li>
+							{% if todo.completed  %}
+							<li class="list-group-item todo-completed">{{ todo.item }}</li>
 							{% else %}
-							<a href="{% url 'complete' todo.id %}"><li class="list-group-item">{{ todo.text }}</li></a>
+							<a href="{% url 'completed' todo.id %}"><li class="list-group-item">{{ todo.item }}</li></a>
 							{% endif %}
 						{% endfor %}
 					</ul>
@@ -65,7 +65,7 @@
 			<footer>
 				<div class="row pad">
 					<div class="col-lg-12 text-center">
-						Copyright &copy; 2017 <strong>ToDo App</strong>
+						Copyright &copy; 2022 <strong>To-Do App</strong>
 					</div>
 				</div>
 			</footer>
